backend/yousound/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: api.example.com
      http:
        paths:
          - path: /api/songs/**
            pathType: Prefix
            backend:
              service:
                name: music-service
                port:
                  number: 8081
          - path: /api/playlists/**
            pathType: Prefix
            backend:
              service:
                name: music-service
                port:
                  number: 8081
          - path: /api/albums/**
            pathType: Prefix
            backend:
              service:
                name: music-service
                port:
                  number: 8081
          - path: /api/users/**
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8083
          - path: /api/communities/**
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8083
